--- a/evaluacion-continua/views/index.ejs
+++ b/evaluacion-continua/views/index.ejs
@@ -41,7 +41,7 @@
                                 <img alt="Qries" src=<%= img.url %> width="auto" height="auto"> 
                             </td>
                             <td>
-                                <div alt="Qries" style="background-color: <%=img.color%>;"
+                                <div alt="Qries" style="background-color: rgb(<%=img.color%>);"
                                     width="150px" height="150px"><%= img.color%></div>  
                             </td>
                             <td>
